# python-template

./: .gitignore  .prettier.js  .prettierrc.json  CONTRIBUTING.md  Dockerfile  Makefile  README  alive.sh  docker-compose.yml  dockerfile  install.sh  makefile  pyproject.toml  run-conda.sh  run-docker.sh  run-local.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
src/: mnist.py
